fix bgc on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     font-family: 'Indie Flower', cursive;
-    /* background-repeat: no-repeat; */
+    background-size:     cover;                      /* <------ */
+    background-repeat:   no-repeat;
+    background-position: center center;
     background-attachment: fixed;
     background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
     background-size: cover;
